--- a/.vale.ini
+++ b/.vale.ini
@@ -1,10 +1,10 @@
-# Caminho dos estilos
-StylesPath = styles
+# Configuração do StylesPath
+StylesPath = .github/styles
 
-# Nível mínimo de alerta
+# Configuração do nível mínimo de alerta
 MinAlertLevel = suggestion
 
-# Sintaxe específica
+# Formatos suportados
 [formats]
 mdx = md
 
@@ -12,55 +12,66 @@ mdx = md
 [*.{md,mdx}]
 BasedOnStyles = senhasegura
 
-# Configurações do senhasegura
-[senhasegura]
-# Regras gerais
-alert = error
-warning = warning
-info = suggestion
-
-# Arquivos de vocabulário
-accept = styles/senhasegura/accept.txt
-reject = styles/senhasegura/reject.txt
-
-# Regras de formatação
-TextField = YES
-CodeFenceField = YES
-
-# Regras específicas
-avoid_jargon = warning
-sentence_length = suggestion
-discriminatory_terms = error
-heading_style = suggestion
-heading_punctuation = error
-link_in_heading = error
-code_in_heading = error
-required_fields_mark = error
-use_imperatives = suggestion
-spacing_punctuation = error
-consistent_terms = warning
-en_contractions = warning
-
-# Padrões e expressões regulares
-patterns = error
-
-# Regras personalizadas do senhasegura
-senhasegura_rules = error
+# Configurações específicas do senhasegura
+senhasegura.alert = error
+senhasegura.warning = warning
+senhasegura.info = suggestion
 
 # Vocabulário
-vocab = error
+senhasegura.accept = path/accept.txt
+senhasegura.reject = path/reject.txt
+
+# Validações de texto
+senhasegura.avoid_jargon = warning
+senhasegura.sentence_length = suggestion
+senhasegura.discriminatory_terms = error
+senhasegura.heading_style = suggestion
+senhasegura.heading_punctuation = error
+senhasegura.link_in_heading = error
+senhasegura.code_in_heading = error
+senhasegura.required_fields_mark = error
+senhasegura.use_imperatives = suggestion
+senhasegura.spacing_punctuation = error
+senhasegura.consistent_terms = warning
+senhasegura.en_contractions = warning
 
 # Formatação
-formatting = warning
+senhasegura.TextField = YES
+senhasegura.CodeFenceField = YES
+
+# Padrões e expressões regulares
+senhasegura.patterns = error
+
+# Regras personalizadas
+senhasegura.senhasegura_rules = error
+
+# Formatação geral
+senhasegura.formatting = warning
 
 # Artigos
-articles = warning
+senhasegura.articles = warning
 
 # Números
-numbers = suggestion
+senhasegura.numbers = suggestion
 
 # Blocos de código
-code_blocks = error
+senhasegura.code_blocks = error
 
 # Terminologia
-terminology = warning
+senhasegura.terminology = warning
+
+# Vocabulário
+senhasegura.vocab = error
+
+[*]
+# Ignora alguns arquivos comuns
+TokenIgnores = (CHANGELOG\.md|LICENSE\.md|README\.md)
+
+# Configurações adicionais
+BlockIgnores = (?s) *(~~~ *.+?~~~|\{%.*?%\}|{{.*?}}|\[.*?\])
+
+# Configuração de processamento
+Transform = commands
+
+# Configurações de tokens especiais
+TokenIgnores = (\$+\{[^}]*\}|\$+[A-Z_]+)
