--- a/.vale.ini
+++ b/.vale.ini
@@ -1,74 +1,78 @@
-# Configuração do StylesPath
-StylesPath = .github/styles
+# Validação de títulos
+extends: existence
+message: "Títulos devem seguir o padrão: número_idioma_tipo_nome (Ex: 01_PT_REF_MinhasAprovacoes)"
+level: error
+scope: heading
+pattern: /^(?!\d{2}_(PT|EN)_(REF|EXP|HOW)_[A-Za-z]+)/
 
-# Configuração do nível mínimo de alerta
-MinAlertLevel = suggestion
+---
+# Validação de code fences
+extends: existence
+message: "Blocos de código devem usar três crases (```) e especificar a linguagem"
+level: error
+scope: raw
+pattern: /^```[^a-z]/
 
-# Formatos suportados
-[formats]
-mdx = md
+---
+# Validação de links
+extends: existence
+message: "Links devem usar o formato correto [texto](url)"
+level: warning
+scope: text
+pattern: /\[[^\]]+\]\([^\)]+\)/
 
-# Arquivos a serem verificados
-[*.{md,mdx}]
-BasedOnStyles = senhasegura
+---
+# Validação de numeração em listas
+extends: existence
+message: "Listas numeradas devem começar com '1.'"
+level: warning
+scope: text
+pattern: /^\s*[2-9]/
 
-# Configurações específicas do senhasegura
-senhasegura.alert = error
-senhasegura.warning = warning
-senhasegura.info = suggestion
+---
+# Validação de avisos e alertas
+extends: existence
+message: "Avisos devem começar com 'Atenção:' ou 'Alerta!'"
+level: warning
+scope: text
+pattern: /^(?!Atenção:|Alerta!)/
 
-# Vocabulário
-senhasegura.accept = path/accept.txt
-senhasegura.reject = path/reject.txt
+---
+# Validação de extensões de arquivo
+extends: existence
+message: "Extensões de arquivo devem usar code fences"
+level: warning
+scope: text
+pattern: /\.[a-z]+/
 
-# Validações de texto
-senhasegura.avoid_jargon = warning
-senhasegura.sentence_length = suggestion
-senhasegura.discriminatory_terms = error
-senhasegura.heading_style = suggestion
-senhasegura.heading_punctuation = error
-senhasegura.link_in_heading = error
-senhasegura.code_in_heading = error
-senhasegura.required_fields_mark = error
-senhasegura.use_imperatives = suggestion
-senhasegura.spacing_punctuation = error
-senhasegura.consistent_terms = warning
-senhasegura.en_contractions = warning
+---
+# Validação de caminhos de arquivo
+extends: existence
+message: "Caminhos de arquivo devem usar code fences"
+level: warning
+scope: text
+pattern: /([A-Za-z]:\\|\/)[^\s]+/
 
-# Formatação
-senhasegura.TextField = YES
-senhasegura.CodeFenceField = YES
+---
+# Validação de versões
+extends: existence
+message: "Versões devem seguir o formato 'Versão X - Nome'"
+level: error
+scope: text
+pattern: /^(?!Versão \d+ - [A-Za-z\s]+)/
 
-# Padrões e expressões regulares
-senhasegura.patterns = error
+---
+# Validação de datas
+extends: existence
+message: "Datas devem seguir o formato 'Mês DD, YYYY'"
+level: warning
+scope: text
+pattern: /(?!(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)\s+\d{1,2},\s+\d{4})/
 
-# Regras personalizadas
-senhasegura.senhasegura_rules = error
-
-# Formatação geral
-senhasegura.formatting = warning
-
-# Artigos
-senhasegura.articles = warning
-
-# Números
-senhasegura.numbers = suggestion
-
-# Blocos de código
-senhasegura.code_blocks = error
-
-# Terminologia
-senhasegura.terminology = warning
-
-# Vocabulário
-senhasegura.vocab = error
-
-[*]
-# Ignora alguns arquivos comuns
-TokenIgnores = (CHANGELOG\.md|LICENSE\.md|README\.md)
-
-# Configurações adicionais
-BlockIgnores = (?s) *(~~~ *.+?~~~|\{%.*?%\}|{{.*?}}|\[.*?\])
-
-# Configurações de tokens especiais
-TokenIgnores = (\$+\{[^}]*\}|\$+[A-Z_]+)
+---
+# Validação de itálico
+extends: existence
+message: "Palavras estrangeiras devem estar em itálico"
+level: warning
+scope: text
+pattern: /\b(software|hardware|backup|login|logout|update|download|upload)\b/
