--- a/.github/styles/senhasegura/patterns.yml
+++ b/.github/styles/senhasegura/patterns.yml
@@ -1,5 +1,5 @@
 # Validação de títulos
-extends: regex
+extends: substitution
 message: "Títulos devem seguir o padrão: número_idioma_tipo_nome (Ex: 01_PT_REF_MinhasAprovacoes)"
 level: error
 scope: text
@@ -7,7 +7,7 @@ pattern: '\d{2}_(PT|EN)_(REF|EXP|HOW)_[A-Za-z]+'
 
 ---
 # Validação de code fences
-extends: regex
+extends: substitution
 message: "Blocos de código devem usar três crases (```) e especificar a linguagem"
 level: error
 scope: raw
@@ -15,7 +15,7 @@ pattern: "^```[a-z]+$"
 
 ---
 # Validação de links
-extends: regex
+extends: substitution
 message: "Links devem usar o formato correto [texto](url)"
 level: warning
 scope: text
@@ -23,7 +23,7 @@ pattern: '\[([^\]]+)\]\(([^\)]+)\)'
 
 ---
 # Validação de numeração em listas
-extends: regex
+extends: substitution
 message: "Listas numeradas devem começar com '1.'"
 level: warning
 scope: text
@@ -31,7 +31,7 @@ pattern: '^\s*1\.'
 
 ---
 # Validação de avisos e alertas
-extends: regex
+extends: substitution
 message: "Avisos devem começar com 'Atenção:' ou 'Alerta!'"
 level: warning
 scope: text
@@ -39,7 +39,7 @@ pattern: '^(Atenção:|Alerta!)'
 
 ---
 # Validação de extensões de arquivo
-extends: regex
+extends: substitution
 message: "Extensões de arquivo devem usar code fences"
 level: warning
 scope: text
@@ -47,7 +47,7 @@ pattern: '`\.[a-z]+`'
 
 ---
 # Validação de caminhos de arquivo
-extends: regex
+extends: substitution
 message: "Caminhos de arquivo devem usar code fences"
 level: warning
 scope: text
@@ -55,7 +55,7 @@ pattern: '`([A-Za-z]:\\|\/)[^\s`]+'
 
 ---
 # Validação de versões
-extends: regex
+extends: substitution
 message: "Versões devem seguir o formato 'Versão X - Nome'"
 level: error
 scope: text
@@ -63,7 +63,7 @@ pattern: '^Versão \d+ - [A-Za-z\s]+'
 
 ---
 # Validação de datas
-extends: regex
+extends: substitution
 message: "Datas devem seguir o formato 'Mês DD, YYYY'"
 level: warning
 scope: text
@@ -71,7 +71,7 @@ pattern: '(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)\s+\d{1,2},\s+\d{4}'
 
 ---
 # Validação de itálico
-extends: regex
+extends: substitution
 message: "Palavras estrangeiras devem estar em itálico"
 level: warning
 scope: text
