--- a/.github/styles/senhasegura/sentence_length.yml
+++ b/.github/styles/senhasegura/sentence_length.yml
@@ -2,4 +2,4 @@ extends: metric
 message: "Tente manter as frases com menos de 30 palavras"
 level: suggestion
 metric: sentence-length
-max: 30
+value: 30
